--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -18,7 +18,7 @@ spec:
     - name: clone-repository
       params:
         - name: url
-          value: https://github.com/sreevani916/sreevani-buildah-assignment.git
+          value: https://github.com/upslopeio/express-sample-app
       taskRef:
         kind: Task
         name: git-clone
